[package]
name = "rust-samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
futures-util = "0.3"
tokio = { version = "1.14.0", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
url = "2.2.2"
